change: alignment of texts in the sidebar and updating the positions of the sidebar and header to fixed

--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -1,56 +1,119 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-}
+/* HEADER STYTLE */
 
-header {
-    background: var(--color-primary);
-    color: white;
+.header {
+    padding: 0 1rem;
+    width: 100%;
+    height: 5rem;
+
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    justify-content: space-between;
+
+    color: #FFFFFF;
+    font-family: var(--font-primary);
+    background-color: #2B3A2E;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
 }
 
-header input {
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    border: none;
+.title-content {
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
 }
 
-.center-content {
-    margin: 0 auto;
-}
 
-.knowme-title {
+.title-content h1 {
+    color: inherit;
     font-family: var(--font-tertiary);
+    font-size: 2rem;
+    font-weight: 400;
 }
 
-.add-btn {
-    background: white;
-    color: black;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 50%;
-    font-size: 1.125rem;
-    cursor: pointer;
+
+.page-title {
+    font-family: var(--font-primary);
+    font-size: 1.25rem;
+    font-size: 1.25rem;
 }
+
+
+.actions-header {
+    height: 2.5rem;
+    display: flex;
+    gap: 1.5rem;
+}
+
+
+.searchbar {
+    width: 17rem;
+    max-width: 17rem;
+
+    padding-left: 1.25rem;
+
+    display: flex;
+    align-items: center;
+    gap: 0.625rem;
+
+    border-radius: 20px;
+
+    background-color: #FFFFFF;
+}
+
+
+.searchbar input {
+    width: 13.5rem;
+    max-width: 14rem;
+    height: 1.2rem;
+
+    border: none;
+}
+
+
+.add-post-button {
+    width: 2.5rem;
+    height: 2.5rem;
+
+    text-align: center;
+
+    border: 2px solid #000000;
+    border-radius: 50%;
+}
+
+
+.add-post-button img {
+    width: 1.5rem;
+    height: 2rem;
+}
+
+
+/* SIDEBAR STYLE */
 
 .container {
     display: flex;
 }
 
 .sidebar {
-    width: 15.625rem;
-    background: var(--color-secondary);
-    color: white;
-    height: 100vh;
-    padding: 1.25rem;
+    width: 12.5rem;
+    max-width: 15.625rem;
+    padding: 1rem;
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    color: #FFFFFF;
+
+    background-color: var(--color-secondary);
+
+    position: fixed;
+    top: 5rem;
+    left: 0;
+    height: calc(100vh - 5rem);
+    overflow-y: auto;
 }
 
 .sidebar ul {
@@ -58,33 +121,85 @@ header input {
 }
 
 .sidebar li {
-    padding: 0.625rem;
+  padding: 0.625rem 0;
+  cursor: default;
+}
+
+.topics {
+    padding: 0.5rem;
+
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+}
+
+.home {
+    justify-content: center;
+}
+
+.topics a {
+    color: inherit;
+    font-family: var(--font-primary);
+    font-size: 1.125rem;
+    font-weight: 800;
+
+    text-decoration: none;
+
     cursor: pointer;
 }
 
-.sidebar .active {
-    font-weight: bold;
+.topics span {
+    color: inherit;
+    font-family: var(--font-primary);
+    font-size: 1.125rem;
+    font-weight: 800;
+}
+
+.topics img {
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+.sidebar hr {
+    border: none;
+    border-top: 1px solid #ffffff33;
+    margin: 0.5rem 0;
 }
 
 .friend {
-    padding-left: 1.25rem;
-}
+    padding: 3rem 0;
 
-.item {
     display: flex;
     align-items: center;
-    gap: 0.625rem;
-    padding: 0.625rem;
-    border-radius: 0.5rem;
+    gap: 0.5rem;;
+}
+
+.friend img {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+}
+
+.friend a {
+    color: var(--color-text-sidebar);
+    font-family: var(--font-secondary);
+    font-size: 0.875rem;
+
+    text-decoration: none;
+
+    cursor: pointer;
 }
 
 .owner {
+    padding: 0.5rem 0.8rem;
+
     display: flex;
     align-items: center;
-    gap: 0.625rem;
-    padding: 0.625rem;
-    background: #3e4d3e;
-    border-radius: 0.5rem;
+    gap: 0.5rem;
+
+    border-radius: 8px;
+
+    background-color: var(--color-primary);
 }
 
 .owner img {
@@ -93,12 +208,30 @@ header input {
     border-radius: 50%;
 }
 
+.owner a {
+    color: var(--color-text-sidebar);
+    font-family: "Inter", sans-serif;
+    font-size: 0.875rem;
+
+    text-decoration: none;
+
+    cursor: pointer;
+}
+
+
+/* FEED STYLE */
+
 .feed {
-    flex: 1;
+    min-height: calc(100vh - 5rem);
     padding: 1.25rem;
+    padding-top: 6rem;
+
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    overflow-y: auto;
 }
 
 .edit-btn {
@@ -116,7 +249,7 @@ header input {
 }
 
 .post {
-    background: white;
+    background: #FFFFFF;
     width: 25rem;
     border-radius: 0.625rem;
     box-shadow: 0 0.125rem 0.3125rem rgba(0, 0, 0, 0.1);
@@ -125,6 +258,8 @@ header input {
 }
 
 .post-header {
+    padding: 0.5rem 0;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -139,16 +274,18 @@ header input {
 
 .post-image {
     width: 100%;
-    border-radius: 0.625rem;
+    /* border-radius: 0.625rem; */
     margin-top: 0.625rem;
 }
 
 .caption {
     margin: 0.625rem 0;
+    padding: 0.5rem 0.2rem;
 }
 
 .actions {
     display: flex;
+    justify-content: space-between;
     gap: 0.625rem;
 }
 
