--- a/assets/css/login_register.css
+++ b/assets/css/login_register.css
@@ -22,7 +22,7 @@
     max-width: 25rem; 
     
     margin: auto;
-    padding: 5rem 5rem;
+    padding: 3rem 4rem;
 
     border-radius: 5px;
 
@@ -104,7 +104,7 @@
 
 
 .login__register__button {
-    padding: 0.4rem auto;
+    padding-top: 0.4rem;
     padding-bottom: 0.4rem;
 
     color: inherit;
